# deepfellow-vibekode-workshop-munich-2026

./: README.md  index.html
df_infra_tap/: config.json  plugin.py
patient-database-mcp/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  database.py  generate_patients.py  pyproject.toml  server.py
slides/: slides.html
vector_demo_docs/: 01_ixekizumab.txt  02_adalimumab.txt  03_ustekinumab.txt  04_tofacitinib.txt
